# pantry-backend

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  skills-lock.json  vercel.json
plan/: feature-household-succession-database-1.md
scripts/sql/: test_household_succession.sql
src/: index.py
src/pantry_backend/: __init__.py  app.py  embedding_worker.py
src/pantry_backend/ai/: retriever_cache.py  tools.py
src/pantry_backend/core/: cache.py  errors.py  exceptions.py  logging.py  rate_limit.py  settings.py
src/pantry_backend/integrations/: gemini_client.py  supabase_client.py
src/pantry_backend/models/: __init__.py  household.py  pantry.py  preferences.py  recipes.py  shopping_list.py
src/pantry_backend/prompts/: recipes.py
src/pantry_backend/services/: __init__.py  auth_service.py  household_service.py  pantry_service.py
src/pantry_backend/utils/: __init__.py  constants.py  embedding.py
src/pantry_backend/vectorstores/: supabase_vector_store.py
src/pantry_server/: __init__.py  main.py
src/pantry_server/api/: __init__.py  router.py
src/pantry_server/core/: __init__.py  config.py  constants.py  datetime_formatting.py  errors.py  exceptions.py  lifespan.py
supabase/migrations/: 20260301000000_create_pantry_items_and_embedding_jobs.sql  20260324_create_embedding_worker_cron.sql  20260324_enable_rls_pantry_embedding_jobs.sql  20260324_match_pantry_items_ready_only.sql  20260401000000_drop_legacy_pantry_embedding_trigger.sql  20260402100000_household_members_profiles.sql
tests/: test_ai_infrastructure.py  test_auth_routes_integration.py  test_core_errors_and_lifespan.py  test_core_validation_and_exceptions.py  test_datetime_formatting.py  test_health.py  test_household_concurrency_integration.py  test_household_join_rate_limit.py  test_household_service.py  test_main.py  test_middleware.py  test_observability.py  test_pantry_service.py  test_shared_dependencies_and_auth.py  test_supplementary_rate_limits.py
(+53 files in other folders)
