[project]
name = "pantry-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "charles", email = "charles19rex@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-text-splitters>=1.1.1",
    "langchain[google-genai]>=1.2.12",
    "langgraph>=1.1.3",
    "passlib[bcrypt]>=1.7.4",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dateutil>=2.9.0.post0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "slowapi>=0.1.9",
    "supabase>=2.28.2",
    "uvicorn[standard]>=0.42.0",
]

[project.scripts]
pantry-backend = "pantry_backend:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
